syntax = "proto3";
package bms;

enum BalancingstatusType {
BALANCINGSTATUS_OFF = 0;
BALANCINGSTATUS_DISCHARGE = 1;
}

message BoardStatus {
uint32 errors = 1;
BalancingstatusType balancing_status = 2;
uint64 _timestamp = 3;
}

message Temperatures {
uint32 start_index = 1;
uint32 temp0 = 2;
uint32 temp1 = 3;
uint32 temp2 = 4;
uint32 temp3 = 5;
uint32 temp4 = 6;
uint32 temp5 = 7;
uint64 _timestamp = 8;
}

message Voltages {
uint32 start_index = 1;
uint32 voltage0 = 2;
uint32 voltage1 = 3;
uint32 voltage2 = 4;
uint64 _timestamp = 5;
}

message Balancing {
uint32 board_index = 1;
uint32 cells = 2;
uint64 _timestamp = 3;
}

message FwUpdate {
uint32 board_index = 1;
uint64 _timestamp = 2;
}

message BmsFenice {
repeated BoardStatus board_status = 1;
repeated Temperatures temperatures = 2;
repeated Voltages voltages = 3;
repeated Balancing balancing = 4;
repeated FwUpdate fw_update = 5;
}